--- a/adm/templates/pdf.html
+++ b/adm/templates/pdf.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>Relatório de Pontos - Kronos</title>
     <style>
         @page {
             size: A4;
@@ -65,7 +66,7 @@
     <div class="pagina-a4">
         <div class="cabecalho">
             <h2>Relatório de Pontos</h2>
-            <p><strong>Data da geração:</strong> {{ data_atual.strftime('%d/%m/%Y %H:%M') }}</p>
+            <p><strong>Data da emissão:</strong> {{ data_atual.strftime('%d/%m/%Y %H:%M') }}</p>
         </div>
 
         <table>
