--- a/adm/templates/login.html
+++ b/adm/templates/login.html
@@ -20,6 +20,7 @@
     <input type="password" name="senha" placeholder="Senha" required>
     <a href="/recuperar_senha" class="link-login">Recuperar Senha</a>
     <div class="button-container">
+        <a href="{{ url_for('ponto.registrar_ponto')}}"><button type="button">Voltar</button></a>
         <button type="submit">Entrar</button>
     </div>
 </form>
