--- a/static/css/login/stylesheet.css
+++ b/static/css/login/stylesheet.css
@@ -122,6 +122,7 @@ a.link-login {
 
 .login-form button {
     padding: 0.8rem 1.5rem;
+    margin-left: 10px;
     border: none;
     border-radius: 5px;
     background-color: #1c4f88;
@@ -187,7 +188,7 @@ body {
 }
 
 .form-ponto input {
-        height: 50%;
+    height: 50%;
     padding: 10px 14px;
     border: none;
     border-radius: 5px;
