--- a/adm/templates/nova_senha.html
+++ b/adm/templates/nova_senha.html
@@ -15,6 +15,7 @@
         {% endif %}
     {% endwith %}
 
+    <input type="text" name="matricula" placeholder="matricula" required autofocus>
     <input type="password" name="nova_senha" placeholder="Digite sua nova senha" required autofocus>
     <input type="password" name="confirmar_nova_senha" placeholder="Confirme sua nova senha" required>
 
