--- a/adm/templates/nova_senha.html
+++ b/adm/templates/nova_senha.html
@@ -14,12 +14,11 @@
             </div>
         {% endif %}
     {% endwith %}
-
-    <input type="text" name="matricula" placeholder="matricula" required autofocus>
     <input type="password" name="nova_senha" placeholder="Digite sua nova senha" required autofocus>
     <input type="password" name="confirmar_nova_senha" placeholder="Confirme sua nova senha" required>
 
     <div class="button-container">
+        <a href="/"><button type="button">Voltar</button></a>
         <button type="submit">Salvar Nova Senha</button>
     </div>
 </form>
