--- a/ponto/templates/home.html
+++ b/ponto/templates/home.html
@@ -14,7 +14,7 @@
         <form class="form-ponto" method="POST" action="/">
             <div class="Alinhamento_botoes">
                 <input type="text" name="matricula" class="input-matricula" placeholder="Matrícula" required>
-                <input type="password" name="senha" placeholder="Digite sua Senha" required>
+                <input type="password" name="senha" placeholder="Senha" required>
             </div>
             <div class="Alinhamento_botoes">
                 <a href="/recuperar_senha" class="link-login">Recuperar Senha</a>
