--- a/static/css/ponto/stylesheet.css
+++ b/static/css/ponto/stylesheet.css
@@ -1,5 +1,3 @@
-/* static/styles.css */
-
 body,
 html {
     margin: 0;
@@ -35,6 +33,8 @@ html {
 }
 
 .login-btn {
+    width: 70px;
+    height: 30px;
     padding: 8px 16px;
     background-color: #1e81b0;
     border: none;
@@ -56,6 +56,7 @@ html {
     justify-content: center;
     align-items: self-end;
     font-size: 6rem;
+    margin-left: 50px;
     margin-bottom: 2rem;
     font-weight: bold;
 }
@@ -87,7 +88,8 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5rem;
+    gap: 2.5rem;
+    width: 100%;
 }
 
 .form-ponto input {
@@ -102,8 +104,9 @@ html {
 }
 
 .form-ponto .input-matricula {
-    width: 50px; /* ou outro valor menor */
+    width: 150px;
     font-size: 1rem;
+    margin-right: 2.5rem;
 }
 
 .form-ponto button {
@@ -135,7 +138,7 @@ a.link-login {
     display: inline-block;
     padding: 10px;
     margin-right: 10px;
-    color: #4da3ff; /* Azul claro */
+    color: #4da3ff; 
     font-size: 0.9rem;
     font-weight: 500;
     text-decoration: none;
