--- a/adm/templates/editar.html
+++ b/adm/templates/editar.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="form-actions">
-        <a href="{{ url_for('adm.consultar') }}"><button type="button">Voltar</button></a>
+        <a href="{{ url_for('adm.consultar') }}" class="botao-base"><button type="button">Voltar</button></a>
         <button type="submit">Salvar Alterações</button>
     </div>
 </form>
