--- a/ponto/templates/base-ponto.html
+++ b/ponto/templates/base-ponto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../static/css/ponto/stylesheet.css"> 
     <link rel="shortcut icon" href="../../static/img/favicon.png" type="image/x-icon">
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <title>Kronos</title>
 </head>
 <body>
