--- a/adm/templates/pdf.html
+++ b/adm/templates/pdf.html
@@ -94,14 +94,14 @@
     {% endif %}
 
     <!-- URL para carregar a imagem -->
-    {% set img_url = url_for('static', filename='img/So_logo-sf.png') %}
+    {% set img_url = url_for('static', filename='img/Logo_Sem_Fundo.png') %}
 
      <!-- Loop para dividir os dados em páginas (no caso só deixei 30 por pagina)-->
     {% for pagina in pontos|batch(30) %} {# 20 registros por página #}
         <div class="pagina-a4">
             
             <!-- Marca d'água -->
-            <img src="{{ img_url }}" class="marca-dagua" />
+            <img src="https://kronos-gestao-do-tempo.onrender.com/static/img/So_logo-sf.png" class="marca-dagua" />
 
             <!-- Cabeçalho do relatório (só aparece na primeira página) -->
             {% if loop.first %}
