--- a/ponto/templates/relatorio_colaborador.html
+++ b/ponto/templates/relatorio_colaborador.html
@@ -16,7 +16,7 @@
 
 <h2 style="text-align:center; margin-bottom: 1.5rem;">Relatório de Pontos</h2>
 
-<form method="post" action="{{ url_for('ponto.relatorio_colaborador') }}" class="form-ponto">
+<form method="post" action="{{ url_for('ponto.relatorio_colaborador') }}" class="form-ponto" target="_blank">
 
     <!-- Campo Matrícula -->
     <div class="campos-lado-a-lado">
