--- a/ponto/templates/home.html
+++ b/ponto/templates/home.html
@@ -61,7 +61,7 @@
             alerts.forEach(alert => {
                 alert.style.opacity = '0';
                 alert.style.transform = 'translateY(-10px)';
-                setTimeout(() => alert.remove(), 500); // Remove após fade out
+                setTimeout(() => alert.remove(), 500);
             });
         }, 5000);
     });
