--- a/static/css/adm/stylesheet.css
+++ b/static/css/adm/stylesheet.css
@@ -1,4 +1,3 @@
-/* Reset e estilo geral */
 body {
     margin: 0;
     padding: 0;
@@ -110,7 +109,7 @@ form {
 .form-group input,
 .form-group select {
     width: 100%;
-    box-sizing: border-box; /* Garante que padding não estoure */
+    box-sizing: border-box;
 }
 
 label {
@@ -300,7 +299,7 @@ button[type="button"]:hover {
     }
 
     .form-group {
-        min-width: 100%; /* Ocupa toda a largura disponível */
+        min-width: 100%;
         max-width: 100%;
     }
 
